baml_language/crates/baml_tests/snapshots/compiles/numeric_invariance_ok/baml_tests__compiles__numeric_invariance_ok__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
class user.BigintCounter {
  count: bigint
}
function user.BigintFieldOk() -> user.BigintCounter  [expr] {
  {  } user.BigintCounter { count: 1n }
}
function user.BigintLiteralArray() -> bigint[]  [expr] {
  {  } [1n, 2n]
}
function user.BigintMapLiteral() -> map<string, bigint>  [expr] {
  {  } map { "a": 1n }
}
function user.EmptyBigintArray() -> bigint[]  [expr] {
  {  } []
}
function user.EvolvingRetype() -> bigint[]  [expr] {
  { let a = [] } a
}
function user.IntArrayIdentity() -> int[]  [expr] {
  { let a = [1, 2] } a
}
function user.from_json(j: baml.json.json) -> user.BigintCounter  [expr] {
  user.BigintCounter { count: baml.json.from_json(baml.json.field(j, "count")) }
}
function user.to_json(self: ?) -> baml.json.json  [expr] {
  map { "count": baml.json.to_json(self.count) }
}
