baml_language/crates/baml_tests/snapshots/compiles/numeric_invariance_ok/baml_tests__compiles__numeric_invariance_ok__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.BigintFieldOk() -> BigintCounter {
    // Locals:
    let _0: BigintCounter // _0 // return

    bb0: {
        _0 = user.BigintCounter { const 1n };
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.BigintLiteralArray() -> bigint[] {
    // Locals:
    let _0: bigint[] // _0 // return

    bb0: {
        _0 = [const 1n, const 2n]: bigint[];
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.BigintMapLiteral() -> map<string, bigint> {
    // Locals:
    let _0: map<string, bigint> // _0 // return

    bb0: {
        _0 = { const "a": const 1n }: map<string, bigint>;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.EmptyBigintArray() -> bigint[] {
    // Locals:
    let _0: bigint[] // _0 // return

    bb0: {
        _0 = []: bigint[];
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.EvolvingRetype() -> bigint[] {
    // Locals:
    let _0: bigint[] // _0 // return
    let _1: bigint[] // a

    bb0: {
        _1 = []: never[];
        _0 = copy _1;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.IntArrayIdentity() -> int[] {
    // Locals:
    let _0: int[] // _0 // return
    let _1: int[] // a

    bb0: {
        _1 = [const 1_i64, const 2_i64]: int[];
        _0 = copy _1;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.BigintCounter.from_json(j: baml.json.json) -> BigintCounter {
    // Locals:
    let _0: BigintCounter // _0 // return
    let _1: baml.json.json // j // param
    let _2: bigint
    let _3: baml.json.json
    let _4: type

    bb0: {
        _3 = call const fn baml.json.field(copy _1, const "count") -> [bb1];
    }

    bb1: {
        _4 = load_type(bigint);
        _2 = call const fn baml.json.from_json<copy _4>(copy _3) -> [bb2];
    }

    bb2: {
        _0 = user.BigintCounter { copy _2 };
        goto -> bb3;
    }

    bb3: {
        return;
    }
}
