baml_language/crates/baml_tests/snapshots/compiles/numeric_invariance_ok/baml_tests__compiles__numeric_invariance_ok__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.BigintCounter.from_json(j: baml.json.json) -> BigintCounter {
    load_var j
    load_const "count"
    call baml.json.field
    store_var _3
    load_type bigint
    load_var _3
    call baml.json.from_json
    store_var _2
    alloc_instance user.BigintCounter
    load_var _2
    init_field .count
    return
}

function user.BigintCounter.to_json(self: null) -> baml.json.json {
    load_var self
    load_field .count
    call baml.Bigint.to_json
    load_const "count"
    alloc_map 1
    return
}

function user.BigintFieldOk() -> BigintCounter {
    alloc_instance user.BigintCounter
    load_const 1n
    init_field .count
    return
}

function user.BigintLiteralArray() -> bigint[] {
    load_const 1n
    load_const 2n
    alloc_array 2
    return
}

function user.BigintMapLiteral() -> map<string, bigint> {
    load_const 1n
    load_const "a"
    alloc_map 1
    return
}

function user.EmptyBigintArray() -> bigint[] {
    alloc_array 0
    return
}

function user.EvolvingRetype() -> bigint[] {
    alloc_array 0
    return
}

function user.IntArrayIdentity() -> int[] {
    load_const 1
    load_const 2
    alloc_array 2
    return
}

function user.ScalarIntToBigint(x: int) -> bigint {
    load_var x
    return
}
